# ramona-irc

./: ChangeLog.md  README.md  ramona.cabal
app/: Main.hs
