name:           ramona
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/appositum/ramona-irc#readme>
homepage:       https://github.com/appositum/ramona-irc#readme
bug-reports:    https://github.com/appositum/ramona-irc/issues
author:         Eddie
maintainer:     appositum@protonmail.com
copyright:      2018 Eddie
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/appositum/ramona-irc

library
  exposed-modules:
      Lib
  other-modules:
      Paths_ramona
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable ramona-exe
  main-is: Main.hs
  other-modules:
      Paths_ramona
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ramona
    , network
  default-language: Haskell2010

test-suite ramona-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ramona
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ramona
  default-language: Haskell2010
